--- a/course/templates/base/base.html
+++ b/course/templates/base/base.html
@@ -17,16 +17,16 @@
    <title>{% block title %}{% endblock %}</title>
    <style>
       :root{
-         --background: #5a4655;
-         --primary: #9ea371;
-         --secondary: #cb5b4b;
-         --white: #f6f3ee;
-         --nav-link-text: #abaea9;
+         --background-yellow: #fbf4e7;
+         --primary: #253C6A;
+         --secondary: #6A5325;
+         --white: #ffffff;
+         --nav-link-text: rgba(255, 255, 255, 0.6);
          --other: ;
 
       }
       body {
-         background-color: var(--background);
+         background-color: var(--background-yellow);
       }
 
       .btn-primary,
@@ -70,7 +70,7 @@
       .navbar-customclass .nav-item:hover .nav-link,
       .navbar-sub-customclass .nav-item.active .nav-link,
       .navbar-sub-customclass .nav-item:hover .nav-link {
-         color: var(--background);
+         color: var(--background-yellow);
       }
 
       #dropdownUser1 {
